--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,18 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        debug {}
+        debug {
+            buildConfigField "String", "SERVER_URL", "\"https://609a908e0f5a13001721b74e.mockapi.io/picpay/api/\""
+
+        }
 
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        mock{
+            buildConfigField "String", "SERVER_URL", "\"http://localhost:8080/\""
         }
     }
 
@@ -70,6 +76,7 @@ dependencies {
 
 
 
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:${Versions.okhttp}"
     androidTestImplementation "androidx.test:runner:$test_runner_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test:core-ktx:$core_ktx_test_version"
